--- a/splendid/pubspec.yaml
+++ b/splendid/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_riverpod: ^1.0.4
   settings_ui: ^2.0.2
+  bitsdojo_window: ^0.1.2
 
 dev_dependencies:
   flutter_test:
