--- a/splendid/pubspec.yaml
+++ b/splendid/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^1.0.4
   settings_ui: ^2.0.2
   bitsdojo_window: ^0.1.2
+  expansion_tile_card: ^2.0.0
+  flex_color_picker: ^2.5.0
 
 dev_dependencies:
   flutter_test:
