--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   bitsdojo_window: ^0.1.2
   expansion_tile_card: ^2.0.0
   flex_color_picker: ^2.5.0
+  boardview: ^0.2.2
+  cached_network_image: ^3.2.1
 
 dev_dependencies:
   flutter_test:
